--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+      layout:decorator="layout">
+
 <head>
     <title>MiniMatlab 0.1 alpha</title>
     <meta charset="UTF-8"/>
 </head>
 <body>
-<h1>Wynik obliczeń</h1>
+<section layout:fragment="content">
 <p th:object="${calculatorForm}">
     <span th:text="*{x}">2</span>
     <span th:text="*{operation}">+</span>
@@ -17,5 +20,7 @@
 <p>
     <a href="/">Fajnie było, jeszcze raz!</a>
 </p>
+</section>
+
 </body>
 </html>
